# full-stack-fastapi-postgresql

./: README.md
{{cookiecutter.project_slug}}/: docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: backend.dockerfile
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py
