[tool.poetry]
name = "app"
version = "1.6.1"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
python-multipart = "^0.0.5"
email-validator = "^2.0.0.post2"
requests = "^2.23.0"
celery = "^5.3.4"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^2.4.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^2.0.21"
pytest = "^7.4.2"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
typed-ast = "^1.5.5"
httpcore = "^0.18.0"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
mypy = "^1.5.1"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7.4.2"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

